--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,13 @@
             <version>5.10.1</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- Git -->
+        <dependency>
+            <groupId>org.eclipse.jgit</groupId>
+            <artifactId>org.eclipse.jgit</artifactId>
+            <version>6.8.0.202311291450-r</version>
+        </dependency>
     </dependencies>
 
     <build>
