--- a/settings.properties
+++ b/settings.properties
@@ -1,5 +1,5 @@
 #Addon Creator Settings
 #Thu Jan 29 23:36:55 CET 2026
-git_token=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
+git_token=
 git_user=agustinbeniteez
 language=Espa\u00F1ol
