editor img pixelart

--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,11 @@
             <artifactId>javafx-media</artifactId>
             <version>${javafx.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-swing</artifactId>
+            <version>${javafx.version}</version>
+        </dependency>
 
         <!-- JSON Processing -->
         <dependency>
